Update UserQueries.md with new query examples and add `--execute` usage guide